--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         {% for post in post_list %}
-            <h3>{{post.title}}</h3>
+            <a>{{post.title}} | {{post.user}}</a>
+        {% endfor %}
     </body>
 </html>
