검색 구현 일단은

--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 
 <html lang="ko">
-    <head>
-        <meta charset="utf-8">
-        <title> 글 리스트 </title>
-    </head>
-    <body>
-        {% for post in post_list %}
-            <a>{{post.title}} | {{post.user}}</a>
-        {% endfor %}
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title> 글 리스트 </title>
+</head>
+<body>
+    <!-- 검색 -->
+    <form action="." method="post"> {% csrf_token %}
+        {{ form.as_p }}
+        <input type = "submit">
+    </form>
+    {% if object_list %}<!-- 검색 결과가 있다면-->
+    {% for post in object_list %}<br>
+    <a href=""> {{ post.title }}</a>
+    {% endfor %}
+    {% elif search_word %} <!-- 검색 결과가 없으면-->
+    "{{ search_word }}" 검색 결과 없음.
+    {% endif %}
+    <!--글 가져오기--><br><br>
+    {% for post in post_list %}
+        <a>{{post.title}} | {{post.user}}</a><br>
+    {% endfor %}
+</body>
 </html>
