qna, review, multiple image upload - 근데 잘 안됨

--- a/templates/main/postdetail.html
+++ b/templates/main/postdetail.html
@@ -10,9 +10,17 @@
 {% endfor %}
 <br>
 <p>
-    <form action = "{% url "main:new_review" %}?post_pk={{object.pk}}" method="post">
+    <form action = "{% url "main:new_review" %}?post_pk={{object.pk}}" method="post" enctype="multipart/form-data>
         {% csrf_token %}
         {{comment_form}}
+        {{image_formset}}
+        <input type="submit">
+    </form>
+
+
+    <form action = "{% url "main:new_qna" %}?post_pk={{object.pk}}" method="post">
+        {% csrf_token %}
+        {{qna_form}}
         <input type="submit">
     </form>
 </p> 
