--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -6,15 +6,12 @@
     <title> 글 리스트 </title>
 </head>
 <body>
+    <a href= "{% url "main:list" %}">홈으로 </a><br>
     <!-- 정렬기능 셀렉트 박스-->
     <select id="sort-select" onchange="location = this.value;">
         <option class="sort-date" value="/">최신순</option>
         <option class="sort-likes" value="?sort=likes">좋아요순</option>
-        {% if user.is_authenticated %}
-        <option class="sort-mypost" value="?sort=mypost">내가쓴글</option>
-        {% endif %}
     </select>
-
 
     <!-- 검색 -->
     <form action="." method="post"> {% csrf_token %}
