--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -32,5 +32,12 @@
     {% for post in post_list %}     
     <a href="{% url 'post:detail' post.id %}">{{post.title}} | {{post.user}}</a><br>
     {% endfor %}
+    '''삭제하기'''
+    <form method="post">{% csrf_token %}
+        <p>Are you sure you want to delete "{{ object }}"?</p>
+        <input type="submit" value="Confirm">
+    </form>
+
+
 </body>
 </html>
