--- a/templates/post/delete.html
+++ b/templates/post/delete.html
@@ -1,6 +1,9 @@
-<html>
-    <form method="post">{% csrf_token %}
+{% extends 'base.html' %}
+
+{% block content %}
+    <form method="post">
+        {% csrf_token %}
         <p>Are you sure you want to delete "{{ object }}"?</p>
         <input type="submit" value="Confirm">
     </form>
-</html>
+{% endblock %}
