--- a/templates/post/post_new.html
+++ b/templates/post/post_new.html
@@ -1,18 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>post_new</title>
-</head>
-<body>
-        <form action="" method='POST' enctype="multipart/form-data">
+{% extends 'base.html' %}
+{% load crispy_forms_tags %}  
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+
+{% block content %}
+<form action="" method='POST' enctype="multipart/form-data">
             {% csrf_token %}
-            <table>
-                {{form.as_table}}
-            </table>
-            <input type="submit">
-        </form>    
-</body>
-</html>
+                {{ form.title|as_crispy_field }}
+            <div class="row">
+                    <div class="col-6">
+                      {{ form.category|as_crispy_field }}
+                    </div>
+                    <div class="col-6">
+                      
+                    </div>
+            </div>
+                {{ form.etc_what|as_crispy_field }}
+                {{ form.Option|as_crispy_field }}
+                {{ form.choose_date|as_crispy_field:"bootstrap"}}
+                {{ form.price|as_crispy_field }}
+                {{ form.context|as_crispy_field }}
+
+            <button type="submit" class="btn btn-success">글 올리기</button>
+</form>  
+<!-- <form method="post">
+    {% csrf_token %}
+        {% bootstrap_form form|as_crispy_field %}
+        {% buttons %}
+        <button type="submit" class="btn btn-primary">Save</button>
+    {% endbuttons %}
+</form>
+          -->
+
+{% endblock %}
+
