--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,20 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-8">
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_active %}
+                <li><a href="{%url 'login' %}"> <span class="glyphicon glyphicon-heart"></span> welcome, {{user.username}}</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                <li><a href="{%url 'login' %}"> <span class="glyphicon glyphicon-user"></span> Login</a></li>
+                <li><a href="{% url 'admin:index' %}">Admin</a></li>
+                <li><a href="{% url 'accounts:signup' %}">회원가입</a></li>
+                {% endif %}
+            </ul>
           <h1 class="mt-2">공공의 방</h1>
           <hr class="mt-0 mb-4">
           {% block content %}
+          
           {% endblock %}
         </div>
       </div>
