--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -33,8 +33,8 @@
 
     {% if object_list %}
     {% for post in object_list  %}
-    <a href="{% url 'post:detail' post.id %}">{{post.title}} | {{post.user}}</a><br>
-    <a href ="{% url 'post:detail' post.id %}"> 삭제하기 </a>
+    <a href="{% url 'post:detail' post.id %}"> {{post.title}} | {{post.user}} | 후기 {{post.reviews.count}} 개</a>
+    <a href ="{% url 'post:delete' post.id %}"> [삭제하기] </a> <br><br>
     {% endfor %}
     {% else %}
     <p>글이 없습니다.</p>
