--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-     
-    <title>share_room</title>
+      <!-- 합쳐지고 최소화된 최신 CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+    <!-- 부가적인 테마 -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+    <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+     <title>share_room</title>
   </head>
   <body>
+      {% load bootstrap4 %}
+    <!--  {% bootstrap_css %}-->
+      {% bootstrap_javascript jquery='full' %}
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-8">
@@ -22,6 +30,8 @@
                 {% endif %}
             </ul>
           <h1 class="mt-2">공공의 방</h1>
+          <a href= "{% url "post:new" %}">글쓰기 </a><br><br>
+          <a href= "{% url "main:list" %}">홈으로 </a><br><br>
           <hr class="mt-0 mb-4">
           {% block content %}
           
