--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -14,7 +14,8 @@
     <title> 글 리스트 </title>
 </head>
 <body>
-
+    {% extends 'base.html' %}
+    {% block content %}
     <a href= "{% url "main:list" %}">홈으로 </a><br><br>
     <a href=" {% url "main:search" %} "> 검색하러 가기</a><br><br>
 
@@ -34,7 +35,7 @@
     {% if object_list %}
     {% for post in object_list  %}
     <a href="{% url 'post:detail' post.id %}">{{post.title}} | {{post.user}}</a><br>
-    <a href ="{% url 'post:detail' post.id %}"> 삭제하기 </a>
+    <a href ="{% url 'post:delete' post.id %}"> 삭제하기 </a>
     {% endfor %}
     {% else %}
     <p>글이 없습니다.</p>
@@ -82,7 +83,7 @@
             </ul>
         </nav>
     {% endif %}
-
+    {% endblock %}
 </body>
 </html>
 
