--- a/templates/post/post_new.html
+++ b/templates/post/post_new.html
@@ -1,32 +1,14 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
+{% load crispy_forms_tags %} 
+
 {% block content %}
 
 {{ form.media }}
-{% load crispy_forms_tags %} 
-
-<form action="" method='POST' enctype="multipart/form-data">
-            {% csrf_token %}
-                {{ form.title|as_crispy_field }}
-            <div class="row">
-                    <div class="col-6">
-                      {{ form.category|as_crispy_field }}
-                    </div>
-                    <div class="col-6">
-                      
-                    </div>
-            </div>
-                
-                {{ form.etc_what|as_crispy_field }}
-                {{ form.choose_date|as_crispy_field:"bootstrap"}}
-                {{ form.price|as_crispy_field }}
-                {{ form.context|as_crispy_field }}
-
-            <button type="submit" class="btn btn-success">글 올리기</button>
-</form>  
-
-
+<form method="post">
+  {% csrf_token %}
+  {% bootstrap_form form %}
+  <input type="submit" value="Save">
+</form>
 {% endblock %}
 
