--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,18 +2,6 @@
   {% extends 'base.html' %}
   {% block content %}
 
-  {% if user.is_active %}
-  <h2> Welcome, {{user.username}} </h2>
-  <a href="{% url 'logout' %}">로그아웃</a>
-
-
-  {% else %}
-  {% if form.errors %}
-
-  <p>ID나 비밀번호가 일치하지 않습니다.</p>
-  {% endif %}
-
-
   <form method="POST" action="{% url 'login' %}" class="sign-in-form">
         {% csrf_token %}
         <h2 class="sub-title"> 로그인 </h2>
@@ -27,10 +15,10 @@
           <label for="{{ form.password.id_for_label }}">패스워드</label>
           <input class="form-control" id="{{ form.password.id_for_label }}" maxlength="120" name="{{ form.password.html_name }}" type="password" />
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="{{ form.email.id_for_label }}">이메일</label>
             <input class="form-control" id="{{ form.email.id_for_label }}" maxlength="120" name="{{ form.email.html_name }}" type="text" />
-        </div>
+        </div> -->
 
         <input type="submit" class="save btn btn-success" value="로그인">
         <a href="{% url 'main:list' %}">
@@ -39,6 +27,4 @@
         <input type="hidden" name="next" value="">
       </form>
       
-
-  {% endif %}
   {% endblock %}
