payment , 수정하기 업로드

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                 {% endif %}
             </ul>
           <h1 class="mt-2">공공의 방</h1>
-          <a href= "{% url "post:new" %}">글쓰기 </a><br><br>
+          <a href= "{% url "post:new" %}"> 호스팅하기 </a>
           <a href= "{% url "main:list" %}">홈으로 </a><br><br>
           <hr class="mt-0 mb-4">
           {% block content %}
