신고 폼 추가

--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -17,7 +17,7 @@
 
     <a href= "{% url "main:list" %}">홈으로 </a><br><br>
     <a href=" {% url "main:search" %} "> 검색하러 가기</a><br><br>
-    <a href=" {% url "guest:main" %} "> 게스트 계정보기</a><br><br>
+    <a href=" {% url "main:myaccount" %} "> 계정관리</a><br><br>
 
     <!-- 정렬기능 셀렉트 박스-->
     <select id="sort-select" onchange="location = this.value;">
