--- a/templates/main/myaccount.html
+++ b/templates/main/myaccount.html
@@ -11,11 +11,16 @@
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
-    <title> 게스트 계정 </title>
+    <title> 계정 관리 </title>
 </head>
 <body>
-    <h2>게스트 계정</h2>
-    <a href = "{% url 'guest:list'%}" >내 구매 내역보기</a>
+    <h1>개인 계정 관리 페이지</h1>
+    <a href= "{% url "main:list" %}">홈으로 </a><br><br>
+    <h2> 호스트 계정</h2>
+    <a href = "{% url 'host:write_list'%}" >판매내역</a>
+    <h2> 게스트 계정</h2>
+ 
+    <h2> 개인 계정</h2>
 
 
 </body>
