post 이미지 추가

--- a/templates/post/postdetail.html
+++ b/templates/post/postdetail.html
@@ -13,7 +13,7 @@
 <h1>댓글 : {{object.context}}</h1>
 <h1>price : {{object.price}}</h1>
 <h3>대여시작시간 : {{object.start_datetime}} 대여종료시간 : {{object.end_datetime}}</h3>
-<h3>사진 모두 보기 :  {{object.images}}</h3>
+<h3>사진 업로드하기 :  {{object.images}}</h3>
 <h1 id="duration"> </h1>
 <h1 id="totalpayment"> </h1>
 
