--- a/templates/post/post_new.html
+++ b/templates/post/post_new.html
@@ -8,7 +8,11 @@
 <form method="post">
   {% csrf_token %}
   {% bootstrap_form form %}
+  {{image_form}}
   <input type="submit" value="Save">
 </form>
+
+
+
 {% endblock %}
 
